samples/_failures_safe/1761289597_3b0be4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8224736.c: In function ‘main’:
./samples/SAFE/__tmp_d8224736.c:156:9: error: expected expression at end of input
  156 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_d8224736.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d8224736.c:156:9: error: expected declaration or statement at end of input
